k8s/deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: recipes-api
  namespace: daily-recipes
  labels:
    k8s-app: recipes-api
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: recipes-api
  template:
    metadata:
      name: recipes-api
      labels:
        k8s-app: recipes-api
    spec:
      containers:
        - name: recipes-api
          #image: 'pc:5000/recipes-service:0.8'
          image: 'elio2004/recipes-service:0.8'
          ports:
          - containerPort: 8081
#          resources:
#              limits:
#                memory: 1024Mi
#                cpu: "1"
          securityContext:
            privileged: false
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /manage/health/liveness
              port: 8081
            initialDelaySeconds: 30
            timeoutSeconds: 5
            failureThreshold: 6
          readinessProbe:
            httpGet:
              path: /manage/health/readiness
              port: 8081
            initialDelaySeconds: 5
            timeoutSeconds: 3
            periodSeconds: 5
      restartPolicy: Always
