k8s/ingress-yalla.yml
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: recipes-api-yalla
  namespace: daily-recipes
  labels:
    k8s-app: recipes-api
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt     
spec:
  tls:
  - hosts:
    - recipes.yalla.run
    secretName: tls-secret
  rules:
  - host: recipes.yalla.run
    http:
      paths:
      - backend:
          serviceName: recipes-api
          servicePort: 8081
        path: /
